<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:gravity="center"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/text_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="100dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                        android:drawablePadding="4dp"
                        android:drawableStart="@drawable/ic_account_circle_black_24dp"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                        android:drawablePadding="4dp"
                        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/reset_password_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingTop="5dp"
                    android:text="@string/forgot_password" />

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:text="@string/sign_in_button"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    custom:pb_colorComplete="@color/green_complete"
                    custom:pb_colorError="@color/red_error"
                    custom:pb_colorNormal="@color/blue_normal"
                    custom:pb_colorPressed="@color/blue_pressed"
                    custom:pb_colorProgress="@color/purple_progress"
                    custom:pb_textComplete="Success"
                    custom:pb_textError="Error"
                    custom:pb_textProgress="Loading" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/twitter_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="4dp" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp" />
            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/user_profile_image_background"
            android:contentDescription="@string/logo_description"
            android:elevation="4dp"
            android:src="@drawable/logo" />
    </RelativeLayout>
</ScrollView>
